# chronicle

./: .env.example  .gitignore  CHANGELOG.md  CHRONICLE_PLAN.md  KNOWN_ISSUES.md  LICENSE  PERFORMANCE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT.md  THREAT_MODEL.md
.github/workflows/: ci.yml  pypi.yml  release.yml
app/: eslint.config.js  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/api/: client.ts
app/src/components/: DetailInspector.tsx  Inspector.tsx  MainPanel.tsx  RunList.tsx  ServerStatus.tsx  Sidebar.tsx  Timeline.tsx  Toast.tsx  TopNav.tsx
app/src/components/Diff/: Diff.tsx  DiffSummary.tsx  EventDiffList.tsx  PromptDiff.tsx  RunSelector.tsx  computeDiff.ts
app/src/components/Diff/__tests__/: Diff.test.tsx  DiffSummary.test.tsx  EventDiffList.test.tsx  PromptDiff.test.tsx  RunSelector.test.tsx  computeDiff.test.ts
app/src/components/Graph/: CycleWarningBanner.tsx  ExecutionGraph.tsx  GraphCanvas.tsx  GraphControls.tsx  GraphNodeView.tsx  index.ts  layout.ts
app/src/components/Graph/__tests__/: ExecutionGraph.test.tsx  GraphCanvas.test.tsx  layout.test.ts
app/src/components/Inspector/: AgentInspector.tsx  EventInspector.tsx  Inspector.tsx  MemoryInspector.tsx  PromptInspector.tsx  ToolInspector.tsx  summarize.ts
app/src/components/Inspector/__tests__/: AgentInspector.test.tsx  EventInspector.test.tsx  Inspector.test.tsx  MemoryInspector.test.tsx  PromptInspector.test.tsx  ToolInspector.test.tsx  summarize.test.ts
app/src/components/Performance/: LatencyTrendChart.tsx  ModelsTable.tsx  PerformanceDashboard.tsx  PeriodSelector.tsx  RunCostScatterChart.tsx  StatCards.tsx  TokenCostTrendChart.tsx  ToolsTable.tsx  format.ts  index.ts
app/src/components/Performance/__tests__/: LatencyTrendChart.test.tsx  ModelsTable.test.tsx  PerformanceDashboard.test.tsx  PeriodSelector.test.tsx  RunCostScatterChart.test.tsx  StatCards.test.tsx  TokenCostTrendChart.test.tsx  ToolsTable.test.tsx
app/src/components/Replay/: ReplayModal.tsx
app/src/components/Replay/__tests__/: ReplayModal.test.tsx
app/src/components/Tests/: CreateTestModal.tsx  TestList.tsx  TestResult.tsx  Tests.tsx
app/src/components/Tests/__tests__/: CreateTestModal.test.tsx  TestList.test.tsx  TestResult.test.tsx  Tests.test.tsx
app/src/components/Timeline/: Timeline.tsx  TimelineChart.tsx  TimelineControls.tsx  TokenUsageSummary.tsx
app/src/components/Timeline/__tests__/: Timeline.test.tsx  TimelineChart.test.tsx  TimelineControls.test.tsx  TokenUsageSummary.test.tsx
app/src/components/__tests__/: App.test.tsx  DetailInspector.test.tsx  Inspector.test.tsx  MainPanel.test.tsx  RunList.test.tsx  Sidebar.test.tsx  Timeline.test.tsx  Toast.test.tsx  TopNav.test.tsx
app/src/components/panels/: DiffPanel.tsx  InspectorPanel.tsx  TimelinePanel.tsx
app/src/components/panels/__tests__/: DiffPanel.test.tsx  InspectorPanel.test.tsx  TimelinePanel.test.tsx
app/src/config/: index.ts
app/src/hooks/: useServerStartupError.ts
app/src/store/: useAppStore.ts
app/src/store/__tests__/: useAppStore.test.ts
app/src/types/: index.ts
docs/: README.md
sdk/: README.md  pyproject.toml
sdk/src/chronicle/: __init__.py  auto.py  chaos.py  cli.py  events.py  memory_diff.py  models.py  server_manager.py  storage.py  tracer.py
sdk/src/chronicle/adapters/: __init__.py  autogen.py  crewai.py  langgraph.py  openai_agents.py  pydanticai.py  semantickernel.py
sdk/src/chronicle/integrations/: __init__.py  langgraph.py
sdk/src/chronicle/testing/: __init__.py  models.py  pytest_plugin.py  runner.py
sdk/tests/: test_auto.py  test_autogen_adapter.py  test_chaos.py  test_crewai_adapter.py  test_events.py  test_framework_detection.py  test_fuzz.py  test_langgraph_adapter.py  test_langgraph_integration.py  test_memory_diff.py  test_models.py  test_openai_agents_adapter.py  test_pydanticai_adapter.py  test_semantickernel_adapter.py  test_server_manager.py  test_snapshots.py  test_storage.py  test_tracer.py
sdk/tests/testing/: test_assertions.py  test_pytest_plugin.py  test_runner.py
server/: README.md  pyproject.toml
server/scripts/: sidecar_entry.py
server/src/: __init__.py  database.py  graph_builder.py  integrity.py  main.py  memory_builder.py  models.py  prompt_diff.py  prompts.py  registry.py  replay.py  timeline.py  validation.py
server/src/chronicle_server/: __init__.py  db.py  main.py  models.py
server/tests/: test_endpoints.py  test_fuzz.py  test_graph_builder.py  test_integrity.py  test_main.py  test_memory.py  test_metrics.py  test_performance.py  test_prompts.py  test_replay.py  test_replay_hardening.py  test_security.py  test_snapshots.py  test_tests_endpoints.py  test_timeline.py
