[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-sdk"
version = "0.6.0"
description = "Python SDK for capturing and shipping AI agent traces to a Chronicle server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chidhvilasa" }]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
chronicle = "chronicle.cli:main"

[project.entry-points.pytest11]
chronicle = "chronicle.testing.pytest_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]
