[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-server"
version = "0.7.0"
description = "Local FastAPI server that stores and serves Chronicle agent traces"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chidhvilasa" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    # Transitive via uvicorn's h11 HTTP/1.1 implementation, pinned explicitly: h11 <
    # 0.16.0 has a request-smuggling vulnerability (CVE-2025-43859 /
    # GHSA-vqfr-h8mv-ghfj) - see SECURITY_AUDIT.md.
    "h11>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
